cachet-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: cachet
  name: cachet
  namespace: default
  selfLink: /api/v1/namespaces/default/services/cachet
spec:
  clusterIP: 10.107.217.21
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30978
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    component: cachet
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 172.17.255.3
